syntax = "proto3";

package authorization;

option java_package = "com.example.authorization";
option java_outer_classname = "AuthorizerProto";

service authorizer{
  rpc SingUp(SingUpRequest) returns (SingUpResponse);
}

message SingUpRequest{
  string login = 1 ;
  string password = 2;
}
message SingUpResponse{
  int32 code = 1;
  string state = 2;
  int32 user_type = 3;
}